--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -64,7 +64,18 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	text-transform: uppercase;
 }
 
+.pagination .paginate_button a {
+	color: #262626;
+}
 
+.pagination .paginate_button.active a {
+	color: #ffffff;
+	background-color: #5399bc;
+	box-shadow: 0px 4px 12px 0 rgba(21, 101, 192, 0.4);
+}
 
+.pagination .paginate_button.disabled a {
+	color: #c6c6c6;
+}
 
 
