--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -64,6 +64,14 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	text-transform: uppercase;
 }
 
+.card .card-header {
+	margin: -20px 25px 0;
+}
+
+.card .card-content {
+	padding: 15px 25px;
+}
+
 .pagination .paginate_button a {
 	color: #262626;
 }
