--- a/app/pages/properties/propertyinfo/propertyinfo.component.css
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.css
@@ -1,3 +1,34 @@
+.nav.nav-pills {
+	background-color: #eceff1;
+}
+.nav-pills .nav-pill {
+}
+.nav-pills .nav-pill a {
+	font-size: 14px;
+	font-weight: 300;
+	text-transform: none;
+	border-radius: 0px;
+}
+.nav-pills .nav-pill:hover a {
+	border-radius: 0px;
+}
+.nav-pills .nav-pill.active a{
+	margin-top: -5px;
+	margin-bottom: -5px;
+	background-color: #5399bc;
+	border-radius: 3px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	box-shadow: none;
+}
+
+
+
+
+
+
+
+/*
 .panel-content {
 	padding: 10px 20px;
 }
@@ -13,7 +44,7 @@
 }
 
 .contact {
-	/*padding: 0 10px 10px 10px;*/
+	/*padding: 0 10px 10px 10px;*//*
 }
 
 a {
@@ -51,3 +82,4 @@ ng2-auto-complete {
 .panel-group.title-error .panel-heading a {
 	color: red !important;
 }
+*/
