--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -1,3 +1,268 @@
+<ul class="nav nav-pills p-l-r-20 m-t-25">
+    <li class="nav-pill active">
+        <a href="#heading-name_address" role="tab" data-toggle="tab" class="">
+            Property Name & Address
+        </a>
+    </li>
+    <li class="nav-pill">
+        <a href="#heading-description" role="tab" data-toggle="tab" class="">
+            Description
+        </a>
+    </li>
+    <li class="nav-pill">
+        <a href="#heading-admin_info" role="tab" data-toggle="tab" class="">
+            Admin Info
+        </a>
+    </li>
+    <li class="nav-pill">
+        <a href="#heading-size_rooms" role="tab" data-toggle="tab" class="">
+            Property Size and Rooms
+        </a>
+    </li>
+    <li class="nav-pill">
+        <a href="#heading-conditions" role="tab" data-toggle="tab" class="">
+            Conditions
+        </a>
+    </li>
+</ul>
+<div class="tab-content">
+    <!--  Property Info  -->
+    <div id="heading-name_address" class="active card-content">
+        <div [formGroup]="propertyForm">
+            <div>
+                <div ng2-auto-complete id="ownerName" [max-num-list]="10" [source]="ownerNames" class="form-group label-floating">
+                    <label class="control-label">Select Owner</label>
+                    <input class="form-control" id="owner-name" formControlName="OwnerName">
+                </div>
+            </div>
+            <div class="form-group label-floating col-lg-6 col-md-6 col-sm-12 listing-name">
+                <label class="control-label">Listing Name</label>
+                <input type="text" class="form-control" formControlName="InternalName">
+            </div>
+            <div class="form-group label-floating listing-name col-lg-6 col-md-6 col-sm-12 official-name">
+                <label class="control-label">Official Name *</label>
+                <input type="text" class="form-control" formControlName="Name">
+            </div>
+            <div class="form-group label-floating">
+                <label class="control-label">Address</label>
+                <input type="text" class="form-control" formControlName="Address">
+            </div>
+            <div>
+                <div id="regionName"
+                     class="form-group label-floating">
+                    <label class="control-label">Select Region *</label>
+                    <input class="form-control"
+                           ng2-auto-complete
+                           formControlName="Region"
+                           [(ngModel)]="propertyForm.controls.Region.value"
+                           [max-num-list]="10"
+                           [source]="regionArray"
+                           [list-formatter]="autocompleListFormatter"
+                           (valueChanged)="regionChanged($event)"
+                           value-property-name="Id"
+                           display-property-name="Name">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  Property Image  -->
+    <div id="heading-description" class="card-content">
+        <div class="panel-body" [formGroup]="propertyForm">
+            <div class="form-group label-floating">
+                <label class="control-label">Headline</label>
+                <input type="text" class="form-control" formControlName="Headline">
+            </div>
+            <div class="form-group label-floating">
+                <label class="control-label">Summary</label>
+                <textarea class="form-control" formControlName="Summary"></textarea>
+            </div>
+            <div class="form-group label-floating">
+                <label class="control-label">Description</label>
+                <textarea class="form-control" formControlName="Description"></textarea>
+            </div>
+            <div class="form-group label-floating">
+                <label class="control-label">Other Important Information</label>
+                <textarea class="form-control" formControlName="OtherInfo"></textarea>
+            </div>
+            <div class="form-group label-floating col-lg-6 col-md-6 col-sm-12 collaborator-initial">
+                <label class="control-label">Collaborator Initials</label>
+                <input type="text" class="form-control" formControlName="CollaboratorInitials">
+            </div>
+            <div class="form-group label-floating listing-name col-lg-6 col-md-6 col-sm-12 box-url">
+                <label class="control-label">Box Url</label>
+                <input type="text" class="form-control" formControlName="BoxUrl">
+            </div>
+            <div *ngIf="mainService.metadata[4]">
+                <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[4]" #villadescription></property-metafilter-cmp>
+            </div>
+        </div>
+    </div>
+    <!--  Property Marketing  -->
+    <div id="heading-admin_info" class="card-content">
+        <div [formGroup]="propertyForm" >
+            <div formArrayName="Contacts">
+                <div class="contact" *ngFor="let control of propertyForm.controls.Contacts.controls; let i = index">
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                        <label class="control-label">Job Title</label>
+                        <input type="text" class="form-control" [formControl]="control.controls.JobTitle">
+                    </div>
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                        <label class="control-label">First Name</label>
+                        <input type="text" class="form-control" [formControl]="control.controls.FirstName">
+                    </div>
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                        <label class="control-label">Last Name</label>
+                        <input type="text" class="form-control" [formControl]="control.controls.LastName">
+                    </div>
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                        <label class="control-label">Email Address</label>
+                        <input type="email" class="form-control" [formControl]="control.controls.EmailAddress">
+                    </div>
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                        <label class="control-label">Telephone</label>
+                        <input type="number" min="0" class="form-control" [formControl]="control.controls.Telephone">
+                    </div>
+                    <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                        <a (click)="removeContact(i)"> Remove Contact </a>
+                    </div>
+                </div>
+
+                <div class="listing-name add-contact col-sm-12 col-md-12 col-lg-12">
+                    <a (click)="showAddContact()"> Add Contact </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="heading-size_rooms" class="card-content">
+        <div [formGroup]="propertyForm">
+            <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                <label class="control-label">Number of Bathrooms</label>
+                <input type="number" class="form-control" formControlName="Bathrooms">
+            </div>
+            <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                <label class="control-label">Number of bedrooms</label>
+                <input type="number" class="form-control" formControlName="Bedrooms">
+            </div>
+            <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                <label class="control-label">Sleeps</label>
+                <input type="number" class="form-control" formControlName="Sleeps">
+            </div>
+            <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                <label class="control-label">Maximum Capacity</label>
+                <input type="number" class="form-control" formControlName="Capacity">
+            </div>
+            <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                <label class="control-label">Living Area (m
+                    <sup>2</sup>
+                    )</label>
+                <input type="number" class="form-control" formControlName="LivingAreaSize">
+            </div>
+            <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
+                <label class="control-label">Dining Capacity</label>
+                <input type="number" class="form-control" formControlName="DiningCapacity">
+            </div>
+            <div class="form-group label-floating listing-name col-sm-12 col-md-12 col-lg-12">
+                <label class="control-label">Kitchen Information</label>
+                <textarea type="text" class="form-control" formControlName="KitchenInfo"></textarea>
+            </div>
+
+            <div formArrayName="Rooms" class="col-sm-12 col-md-12 col-lg-12 listing-name bedrooms">
+                <label>Bedroom Information</label>
+                <div class="" *ngFor="let control of propertyForm.controls.Rooms.controls; let i = index">
+                    <div *ngIf="control.controls.PropertyRoomType.value == 1">
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-3 col-lg-3">
+                            <label class="control-label">Bedroom Name</label>
+                            <input type="text" class="form-control" [formControl]="control.controls.Name">
+                        </div>
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-6">
+                            <label class="control-label">Bedroom Description</label>
+                            <input type="text" class="form-control" [formControl]="control.controls.Description">
+                        </div>
+                        <div class="col-sm-12 col-md-3 col-lg-3 listing-name remove-button">
+                            <a (click)="removeBedroom(i)">REMOVE BEDROOM</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                    <a class="add-bedroom" (click)="addBedroom()">Add Bedroom</a>
+                </div>
+            </div>
+
+            <div formArrayName="Rooms" class="listing-name col-sm-12 col-md-12 col-lg-12 bathrooms">
+                <label>Bathroom Information</label>
+                <div class="" *ngFor="let control of propertyForm.controls.Rooms.controls; let i = index">
+                    <div *ngIf="control.controls.PropertyRoomType.value == 2">
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-3 col-lg-3">
+                            <label class="control-label">Bathroom Name</label>
+                            <input type="text" class="form-control" [formControl]="control.controls.Name">
+                        </div>
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-6">
+                            <label class="control-label">Bathroom Description</label>
+                            <input type="text" class="form-control" [formControl]="control.controls.Description">
+                        </div>
+                        <div class="col-sm-12 col-md-3 col-lg-3 listing-name remove-button">
+                            <a (click)="removeBathroom(i)">REMOVE BATHROOM</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                    <a class="add-bathroom" (click)="addBathroom()">Add Bathroom</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="heading-conditions" class="card-content">
+        <div [formGroup]="propertyForm">
+            <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                <h5 class="listing-name col-sm-12 col-md-12 col-lg-12">Children Allowed</h5>
+                <div id="childrenAllow" class="listing-name radio col-sm-12 col-md-4 col-lg-4">
+                    <label>
+                        <input type="radio" [value]="0" formControlName="ChildrenAllowed"> Children Welcome
+                    </label>
+                </div>
+                <div class="listing-name radio col-sm-12 col-md-4 col-lg-4">
+                    <label>
+                        <input type="radio" [value]="1" formControlName="ChildrenAllowed"> Ask Owner
+                    </label>
+                </div>
+                <div class="listing-name radio col-sm-12 col-md-4 col-lg-4">
+                    <label>
+                        <input type="radio" [value]="2" formControlName="ChildrenAllowed"> Not Suitable For Children
+                    </label>
+                </div>
+            </div>
+            <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
+                    <label>
+                        <input type="checkbox" formControlName="SmokingAllowed"> Smoking Allowed
+                    </label>
+                </div>
+                <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
+                    <label>
+                        <input type="checkbox" formControlName="WheelchairAccessible"> Wheelchairs Allowed
+                    </label>
+                </div>
+                <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
+                    <label>
+                        <input type="checkbox" formControlName="PetsAllowed"> Pets Allowed
+                    </label>
+                </div>
+                <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
+                    <label>
+                        <input type="checkbox" formControlName="EventsAllowed"> Events Allowed
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<!--
 <div class="panel-group" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-name_address">
@@ -31,7 +296,7 @@
                 <div>
                     <!--
                     <div ng2-auto-complete id="regionName" [max-num-list]="10" [source]="regions" (valueChanged)="regionChanged($event)" class="form-group label-floating">
-                    -->
+                    --><!--
                     <div id="regionName"
                          class="form-group label-floating">
                         <label class="control-label">Select Region *</label>
@@ -51,8 +316,8 @@
         </div>
     </div>
 </div>
-
-
+-->
+<!--
 <div class="panel-group" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-description">
@@ -96,8 +361,8 @@
         </div>
     </div>
 </div>
-
-
+-->
+<!--
 <div class="panel-group" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-admin_info">
@@ -136,7 +401,7 @@
                         <a (click)="removeContact(item.id)"> Remove Contact </a>
                     </div>
                 </div>
-                -->
+                --><!--
                 <div class="contact" *ngFor="let control of propertyForm.controls.Contacts.controls; let i = index">
                     <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Job Title</label>
@@ -170,8 +435,8 @@
         </div>
     </div>
 </div>
-
-
+-->
+<!--
 <div class="panel-group" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-size_rooms">
@@ -262,8 +527,8 @@
         </div>
     </div>
 </div>
-
-
+-->
+<!--
 <div class="panel-group" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-conditions">
@@ -320,3 +585,4 @@
         </div>
     </div>
 </div>
+-->
