--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15,7 +15,10 @@
     left: calc(50% - 75px);
     top: calc(50% - 75px);
 }
-
+h5 {
+	font-size: 18px;
+	color: #3a3a3a;
+}
 .bootstrap-datetimepicker-widget {
 	left: -33px !important;
 }
@@ -68,10 +71,6 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	margin: -20px 25px 0;
 }
 
-.card .card-content {
-	padding: 15px 25px;
-}
-
 .pagination .paginate_button a {
 	color: #262626;
 }
@@ -96,8 +95,14 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	margin-left: 0px;
 	margin-right: 0px;
 }
+.m-b-none {
+	margin-bottom: 0px;
+}
 .m-t-5 {
 	margin-top: 5px;
+}
+.m-t-15 {
+	margin-top: 15px;
 }
 .m-t-25 {
 	margin-top: 25px !important;
@@ -130,3 +135,61 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .tab-content >div.active {
 	display: inherit;
 }
+
+
+/**
+ *  Form style
+*/
+.form-control, .form-group .form-control {
+	color: #5399bc;
+	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
+}
+.control-label {
+	color: #b0bec5 !important;
+}
+.form-group.is-focused .form-control {
+	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
+}
+.radio {
+}
+.radio label, .checkbox label {
+	font-size: 14px;
+	color: #3a3a3a;
+}
+.radio label span {
+	left:0px;
+}
+.radio input[type=radio] ~ .circle, .checkbox .checkbox-material .check {
+	border-color: #0b5a7c !important;
+}
+.radio input[type=radio]:checked ~ .check, .checkbox input[type=checkbox]:checked + .checkbox-material .check {
+	background-color: #0b5a7c;
+}
+.checkbox+.checkbox, .radio+.radio {
+	margin-top: 10px;
+}
+
+/**
+ * Custom button
+ */
+.btn.btn-success {
+	padding: 12px 15px;
+	background-color: #5399bc;
+	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
+}
+.btn.btn-success:hover, .btn.btn-success:active, .btn.btn-success:focus, .btn.btn-success:focus:active {
+	background-color: #0b5a7c;
+	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
+}
+.btn.btn-danger {
+	padding: 12px 15px;
+	background-color: #b71c1c;
+	box-shadow: 0px 7px 12px 0 rgba(183, 28, 28, 0.4);
+}
+.btn.btn-danger:hover, .btn.btn-danger:active, .btn.btn-danger:focus, .btn.btn-danger:focus:active {
+	box-shadow: 0px 7px 12px 0 rgba(183, 28, 28, 0.4);
+}
+
+
+
+
