--- a/app/pages/properties/marketing/propertymarketing.component.html
+++ b/app/pages/properties/marketing/propertymarketing.component.html
@@ -1,10 +1,18 @@
-<div [formGroup]="propertyForm">
-	<div class="form-group label-floating marketing-url">
-        <label class="control-label">Unbranded PDF Url</label>
-        <input type="text" class="form-control" formControlName="BoxUrl" #pdfUrl>
-    </div> 
-	<div class="form-group label-floating marketing-url">
-        <label class="control-label">Agency Pack Download Url</label>
-        <input type="text" class="form-control" formControlName="AgencyPackUrl" #agencyUrl>
-    </div>   
+<div [formGroup]="propertyForm" class="card-content">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group label-floating">
+                <label class="control-label">Unbranded PDF Url</label>
+                <input type="text" class="form-control" formControlName="BoxUrl" #pdfUrl>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group label-floating">
+                <label class="control-label">Agency Pack Download Url</label>
+                <input type="text" class="form-control" formControlName="AgencyPackUrl" #agencyUrl>
+            </div>
+        </div>
+    </div>
 </div>
