--- a/app/pages/properties/metafilterheading/metafilterheading.component.html
+++ b/app/pages/properties/metafilterheading/metafilterheading.component.html
@@ -1,24 +1,37 @@
-<div [formGroup]="propertyForm" *ngIf="name == 'Services'" class="housekeeperstate">
-	<h5>Housekeeping</h5>
-    <div id="childrenAllow" class="radio">
-        <label>
-            <input type="radio" [value]="0" formControlName="Housekeeping"> Not Available
-        </label>
-    </div>
-    <div class="radio">
-        <label>
-            <input type="radio" [value]="1" formControlName="Housekeeping"> Housekeeper Included
-        </label>
-    </div>
-    <div class="radio">
-        <label>
-            <input type="radio" [value]="2" formControlName="Housekeeping"> Housekeeper Optional
-        </label>
-    </div>
-
-    <div class="form-group label-floating">
-        <label class="control-label">Other Housekeeping Information</label>
-        <textarea class="form-control" formControlName="OtherHousekeepingInfo"></textarea>
+<div class="card-content">
+    <div [formGroup]="propertyForm" *ngIf="name == 'Services'" class="">
+        <div class="row">
+            <div class="col-xs-12">
+                <h5>Housekeeping</h5>
+            </div>
+            <div class="col-xs-12">
+                <div id="childrenAllow" class="radio">
+                    <label>
+                        <input type="radio" [value]="0" formControlName="Housekeeping"> Not Available
+                    </label>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="radio">
+                    <label>
+                        <input type="radio" [value]="1" formControlName="Housekeeping"> Housekeeper Included
+                    </label>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="radio">
+                    <label>
+                        <input type="radio" [value]="2" formControlName="Housekeeping"> Housekeeper Optional
+                    </label>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="form-group label-floating">
+                    <label class="control-label">Other Housekeeping Information</label>
+                    <textarea class="form-control" formControlName="OtherHousekeepingInfo"></textarea>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -67,15 +80,16 @@
 
     </div>
 </div>
-
-<div [formGroup]="propertyForm" *ngIf="name == 'Features'" class="features">
-    <div class="checkbox">
-        <label>
-            <input type="checkbox" formControlName="LiftAvailable" (click)="liftAvailabilityChanged($event)"> Lift Available
-        </label>
-    </div>
-    <div class="form-group label-floating">
-        <label class="control-label">Unique Benefits</label>
-        <textarea class="form-control" formControlName="Benefits" (change)="uniqueBenefitsChange($event)"></textarea>
+<div class="card-content">
+    <div [formGroup]="propertyForm" *ngIf="name == 'Features'" class="features">
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" formControlName="LiftAvailable" (click)="liftAvailabilityChanged($event)"> Lift Available
+            </label>
+        </div>
+        <div class="form-group label-floating">
+            <label class="control-label">Unique Benefits</label>
+            <textarea class="form-control" formControlName="Benefits" (change)="uniqueBenefitsChange($event)"></textarea>
+        </div>
     </div>
 </div>
