--- a/app/pages/properties/addproperty/addproperty.component.css
+++ b/app/pages/properties/addproperty/addproperty.component.css
@@ -23,6 +23,18 @@
 	font-size: 36px;
 	padding: 6px 0;
 }
+.btn-back {
+	text-transform: uppercase;
+	font-size: 14px;
+	color: #7c7c7c;
+	line-height: 41px;
+	margin: 10px 20px;
+	display: inline-block;
+}
+
+.btn-back i {
+	font-size: 14px;
+}
 
 
 
