--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -107,6 +107,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .m-t-25 {
 	margin-top: 25px !important;
 }
+.m-r-20 {
+	margin-right: 20px;
+}
 .m-l-r-20-negative {
 	margin-left: -20px;
 	margin-right: -20px;
@@ -119,8 +122,12 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	padding-top: 0px !important;
 }
 .p-l-r-20 {
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 20px !important;
+	padding-right: 20px !important;
+}
+.p-l-r-40 {
+	padding-left: 40px !important;
+	padding-right: 40px !important;
 }
 
 
@@ -168,6 +175,18 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .checkbox+.checkbox, .radio+.radio {
 	margin-top: 10px;
 }
+.togglebutton {
+	display: inline-block;
+	line-height: 41px;
+	margin: 10px 40px;
+}
+
+.togglebutton label {
+	color: #262626;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
 
 /**
  * Custom button
